@@ -1,62 +1,53 @@
 package com.terraformersmc.modmenu.gui.widget;
 
 import com.mojang.blaze3d.platform.GlStateManager;
-import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.BufferBuilder;
+import com.mojang.blaze3d.vertex.DefaultVertexFormat;
+import com.mojang.blaze3d.vertex.Tessellator;
 import com.terraformersmc.modmenu.config.ModMenuConfig;
 import com.terraformersmc.modmenu.gui.ModsScreen;
 import com.terraformersmc.modmenu.gui.widget.entries.ModListEntry;
 import com.terraformersmc.modmenu.util.VersionUtil;
 import com.terraformersmc.modmenu.util.mod.Mod;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.font.TextRenderer;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.Selectable;
-import net.minecraft.client.gui.screen.ConfirmLinkScreen;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.screen.ConfirmChatLinkScreen;
+import net.minecraft.client.gui.screen.ConfirmationListener;
+import net.minecraft.client.gui.screen.CreditsScreen;
 import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.screen.narration.NarrationMessageBuilder;
-import net.minecraft.client.gui.screen.narration.NarrationPart;
-import net.minecraft.client.gui.screen.option.CreditsAndAttributionScreen;
-import net.minecraft.client.gui.widget.ElementListWidget;
 import net.minecraft.client.gui.widget.EntryListWidget;
 import net.minecraft.client.render.*;
-import net.minecraft.client.util.math.MatrixStack;
-import net.minecraft.text.OrderedText;
+import net.minecraft.text.Formatting;
 import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
-import net.minecraft.util.Util;
+import net.minecraft.text.TranslatableText;
+import net.minecraft.util.Utils;
 import net.minecraft.util.math.MathHelper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget.DescriptionEntry> {
+import org.lwjgl.opengl.GL11;
 
-	private static final Text HAS_UPDATE_TEXT = Text.translatable("modmenu.hasUpdate");
-	private static final Text EXPERIMENTAL_TEXT = Text.translatable("modmenu.experimental").formatted(Formatting.GOLD);
-	private static final Text MODRINTH_TEXT = Text.translatable("modmenu.modrinth");
-	private static final Text CHILD_HAS_UPDATE_TEXT = Text.translatable("modmenu.childHasUpdate");
-	private static final Text LINKS_TEXT = Text.translatable("modmenu.links");
-	private static final Text SOURCE_TEXT = Text.translatable("modmenu.source").formatted(Formatting.BLUE).formatted(Formatting.UNDERLINE);
-	private static final Text LICENSE_TEXT = Text.translatable("modmenu.license");
-	private static final Text VIEW_CREDITS_TEXT = Text.translatable("modmenu.viewCredits").formatted(Formatting.BLUE).formatted(Formatting.UNDERLINE);
-	private static final Text CREDITS_TEXT = Text.translatable("modmenu.credits");
+public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget.DescriptionEntry> implements ConfirmationListener {
+
+	private static final Text HAS_UPDATE_TEXT = new TranslatableText("modmenu.hasUpdate");
+	private static final Text EXPERIMENTAL_TEXT = new TranslatableText("modmenu.experimental").setFormatting(Formatting.GOLD);
+	private static final Text MODRINTH_TEXT = new TranslatableText("modmenu.modrinth");
+	private static final Text CHILD_HAS_UPDATE_TEXT = new TranslatableText("modmenu.childHasUpdate");
+	private static final Text LINKS_TEXT = new TranslatableText("modmenu.links");
+	private static final Text SOURCE_TEXT = new TranslatableText("modmenu.source").setFormatting(Formatting.BLUE).setFormatting(Formatting.UNDERLINE);
+	private static final Text LICENSE_TEXT = new TranslatableText("modmenu.license");
+	private static final Text VIEW_CREDITS_TEXT = new TranslatableText("modmenu.viewCredits").setFormatting(Formatting.BLUE).setFormatting(Formatting.UNDERLINE);
+	private static final Text CREDITS_TEXT = new TranslatableText("modmenu.credits");
 
 	private final ModsScreen parent;
 	private final TextRenderer textRenderer;
 	private ModListEntry lastSelected = null;
 
-	public DescriptionListWidget(MinecraftClient client, int width, int height, int top, int bottom, int entryHeight, ModsScreen parent) {
+	public DescriptionListWidget(Minecraft client, int width, int height, int top, int bottom, int entryHeight, ModsScreen parent) {
 		super(client, width, height, top, bottom, entryHeight);
 		this.parent = parent;
 		this.textRenderer = client.textRenderer;
-	}
-
-	@Override
-	public DescriptionEntry getSelectedOrNull() {
-		return null;
 	}
 
 	@Override
@@ -65,31 +56,26 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 	}
 
 	@Override
-	protected int getScrollbarPositionX() {
-		return this.width - 6 + left;
+	protected int getScrollbarPosition() {
+		return this.width - 6 + this.minX;
 	}
 
 	@Override
-	public void appendNarrations(NarrationMessageBuilder builder) {
-		Mod mod = parent.getSelectedEntry().getMod();
-		builder.put(NarrationPart.TITLE, mod.getTranslatedName() + " " + mod.getPrefixedVersion());
-	}
-
-	@Override
-	public void render(DrawContext DrawContext, int mouseX, int mouseY, float delta) {
+	public void render(int mouseX, int mouseY, float delta) {
+		capScrolling();
 		ModListEntry selectedEntry = parent.getSelectedEntry();
 		if (selectedEntry != lastSelected) {
 			lastSelected = selectedEntry;
-			clearEntries();
-			setScrollAmount(-Double.MAX_VALUE);
+			clear();
+			scroll(-Integer.MAX_VALUE);
 			if (lastSelected != null) {
-				DescriptionEntry emptyEntry = new DescriptionEntry(OrderedText.EMPTY);
+				DescriptionEntry emptyEntry = new DescriptionEntry("");
 				int wrapWidth = getRowWidth() - 5;
 
 				Mod mod = lastSelected.getMod();
 				String description = mod.getTranslatedDescription();
 				if (!description.isEmpty()) {
-					for (OrderedText line : textRenderer.wrapLines(Text.literal(description.replaceAll("\n", "\n\n")), wrapWidth)) {
+					for (String line : textRenderer.split(description.replaceAll("\n", "\n\n"), wrapWidth)) {
 						children().add(new DescriptionEntry(line));
 					}
 				}
@@ -99,7 +85,7 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 						children().add(emptyEntry);
 
 						int index = 0;
-						for (OrderedText line : textRenderer.wrapLines(HAS_UPDATE_TEXT, wrapWidth - 11)) {
+						for (String line : textRenderer.split(HAS_UPDATE_TEXT.getFormattedString(), wrapWidth - 11)) {
 							DescriptionEntry entry = new DescriptionEntry(line);
 							if (index == 0) entry.setUpdateTextEntry();
 
@@ -107,17 +93,17 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 							index += 1;
 						}
 
-						for (OrderedText line : textRenderer.wrapLines(EXPERIMENTAL_TEXT, wrapWidth - 16)) {
+						for (String line : textRenderer.split(EXPERIMENTAL_TEXT.getFormattedString(), wrapWidth - 16)) {
 							children().add(new DescriptionEntry(line, 8));
 						}
 
-						Text updateText = Text.translatable("modmenu.updateText", VersionUtil.stripPrefix(mod.getModrinthData().versionNumber()), MODRINTH_TEXT)
-							.formatted(Formatting.BLUE)
-							.formatted(Formatting.UNDERLINE);
+						Text updateText = new TranslatableText("modmenu.updateText", VersionUtil.stripPrefix(mod.getModrinthData().versionNumber()), MODRINTH_TEXT)
+							.setFormatting(Formatting.BLUE)
+							.setFormatting(Formatting.UNDERLINE);
 
-						String versionLink = "https://modrinth.com/project/%s/version/%s".formatted(mod.getModrinthData().projectId(), mod.getModrinthData().versionId());
+						String versionLink = String.format("https://modrinth.com/project/%s/version/%s", mod.getModrinthData().projectId(), mod.getModrinthData().versionId());
 
-						for (OrderedText line : textRenderer.wrapLines(updateText, wrapWidth - 16)) {
+						for (String line : textRenderer.split(updateText.getFormattedString(), wrapWidth - 16)) {
 							children().add(new LinkEntry(line, versionLink, 8));
 						}
 					}
@@ -125,7 +111,7 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 						children().add(emptyEntry);
 
 						int index = 0;
-						for (OrderedText line : textRenderer.wrapLines(CHILD_HAS_UPDATE_TEXT, wrapWidth - 11)) {
+						for (String line : textRenderer.split(CHILD_HAS_UPDATE_TEXT.getFormattedString(), wrapWidth - 11)) {
 							DescriptionEntry entry = new DescriptionEntry(line);
 							if (index == 0) entry.setUpdateTextEntry();
 
@@ -140,13 +126,13 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 				if ((!links.isEmpty() || sourceLink != null) && !ModMenuConfig.HIDE_MOD_LINKS.getValue()) {
 					children().add(emptyEntry);
 
-					for (OrderedText line : textRenderer.wrapLines(LINKS_TEXT, wrapWidth)) {
+					for (String line : textRenderer.split(LINKS_TEXT.getFormattedString(), wrapWidth)) {
 						children().add(new DescriptionEntry(line));
 					}
 
 					if (sourceLink != null) {
 						int indent = 8;
-						for (OrderedText line : textRenderer.wrapLines(SOURCE_TEXT, wrapWidth - 16)) {
+						for (String line : textRenderer.split(SOURCE_TEXT.getFormattedString(), wrapWidth - 16)) {
 							children().add(new LinkEntry(line, sourceLink, indent));
 							indent = 16;
 						}
@@ -154,7 +140,7 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 
 					links.forEach((key, value) -> {
 						int indent = 8;
-						for (OrderedText line : textRenderer.wrapLines(Text.translatable(key).formatted(Formatting.BLUE).formatted(Formatting.UNDERLINE), wrapWidth - 16)) {
+						for (String line : textRenderer.split(new TranslatableText(key).setFormatting(Formatting.BLUE).setFormatting(Formatting.UNDERLINE).getFormattedString(), wrapWidth - 16)) {
 							children().add(new LinkEntry(line, value, indent));
 							indent = 16;
 						}
@@ -165,13 +151,13 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 				if (!ModMenuConfig.HIDE_MOD_LICENSE.getValue() && !licenses.isEmpty()) {
 					children().add(emptyEntry);
 
-					for (OrderedText line : textRenderer.wrapLines(LICENSE_TEXT, wrapWidth)) {
+					for (String line : textRenderer.split(LICENSE_TEXT.getFormattedString(), wrapWidth)) {
 						children().add(new DescriptionEntry(line));
 					}
 
 					for (String license : licenses) {
 						int indent = 8;
-						for (OrderedText line : textRenderer.wrapLines(Text.literal(license), wrapWidth - 16)) {
+						for (String line : textRenderer.split(license, wrapWidth - 16)) {
 							children().add(new DescriptionEntry(line, indent));
 							indent = 16;
 						}
@@ -182,7 +168,7 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 					if ("minecraft".equals(mod.getId())) {
 						children().add(emptyEntry);
 
-						for (OrderedText line : textRenderer.wrapLines(VIEW_CREDITS_TEXT, wrapWidth)) {
+						for (String line : textRenderer.split(VIEW_CREDITS_TEXT.getFormattedString(), wrapWidth)) {
 							children().add(new MojangCreditsEntry(line));
 						}
 					} else if (!"java".equals(mod.getId())) {
@@ -190,13 +176,13 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 						if (!credits.isEmpty()) {
 							children().add(emptyEntry);
 
-							for (OrderedText line : textRenderer.wrapLines(CREDITS_TEXT, wrapWidth)) {
+							for (String line : textRenderer.split(CREDITS_TEXT.getFormattedString(), wrapWidth)) {
 								children().add(new DescriptionEntry(line));
 							}
 
 							for (String credit : credits) {
 								int indent = 8;
-								for (OrderedText line : textRenderer.wrapLines(Text.literal(credit), wrapWidth - 16)) {
+								for (String line : textRenderer.split(credit, wrapWidth - 16)) {
 									children().add(new DescriptionEntry(line, indent));
 									indent = 16;
 								}
@@ -208,119 +194,147 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 		}
 
 		Tessellator tessellator = Tessellator.getInstance();
-		BufferBuilder bufferBuilder = tessellator.getBuffer();
+		BufferBuilder bufferBuilder = tessellator.getBuilder();
 
 		{
-			RenderSystem.setShader(GameRenderer::getPositionTexColorProgram);
-			RenderSystem.setShaderTexture(0, Screen.OPTIONS_BACKGROUND_TEXTURE);
-			RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
-			bufferBuilder.begin(VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_TEXTURE_COLOR);
-			bufferBuilder.vertex(this.left, this.bottom, 0.0D).texture(this.left / 32.0F, (this.bottom + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).next();
-			bufferBuilder.vertex(this.right, this.bottom, 0.0D).texture(this.right / 32.0F, (this.bottom + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).next();
-			bufferBuilder.vertex(this.right, this.top, 0.0D).texture(this.right / 32.0F, (this.top + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).next();
-			bufferBuilder.vertex(this.left, this.top, 0.0D).texture(this.left / 32.0F, (this.top + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).next();
-			tessellator.draw();
+			this.minecraft.getTextureManager().bind(Screen.BACKGROUND_LOCATION);
+			GlStateManager.color4f(1.0F, 1.0F, 1.0F, 1.0F);
+			bufferBuilder.begin(GL11.GL_QUADS, DefaultVertexFormat.POSITION_TEX_COLOR);
+			bufferBuilder.vertex(this.minX, this.maxY, 0.0D).texture(this.minX / 32.0F, (this.maxY + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).nextVertex();
+			bufferBuilder.vertex(this.maxX, this.maxY, 0.0D).texture(this.maxX / 32.0F, (this.maxY + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).nextVertex();
+			bufferBuilder.vertex(this.maxX, this.minY, 0.0D).texture(this.maxX / 32.0F, (this.minY + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).nextVertex();
+			bufferBuilder.vertex(this.minX, this.minY, 0.0D).texture(this.minX / 32.0F, (this.minY + (int) this.getScrollAmount()) / 32.0F).color(32, 32, 32, 255).nextVertex();
+			tessellator.end();
 		}
 
-		this.enableScissor(DrawContext);
-		this.renderList(DrawContext, mouseX, mouseY, delta);
-		DrawContext.disableScissor();
+		int listX = this.minX + this.width / 2 - this.getRowWidth() / 2 + 2;
+		int listY = this.minY + 4 - (int)this.scrollAmount;
+		this.renderList(listX, listY, mouseX, mouseY, delta);
 
-		RenderSystem.depthFunc(515);
-		RenderSystem.disableDepthTest();
-		RenderSystem.enableBlend();
-		RenderSystem.blendFuncSeparate(GlStateManager.SrcFactor.SRC_ALPHA, GlStateManager.DstFactor.ONE_MINUS_SRC_ALPHA, GlStateManager.SrcFactor.ZERO, GlStateManager.DstFactor.ONE);
-		RenderSystem.setShader(GameRenderer::getPositionColorProgram);
+		GlStateManager.depthFunc(GL11.GL_LEQUAL);
+		GlStateManager.disableDepthTest();
+		GlStateManager.enableBlend();
+		GlStateManager.blendFuncSeparate(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA, GlStateManager.SourceFactor.ZERO, GlStateManager.DestFactor.ONE);
+		GlStateManager.disableAlphaTest();
+		GlStateManager.shadeModel(GL11.GL_SMOOTH);
+		GlStateManager.disableTexture();
 
-		bufferBuilder.begin(VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_COLOR);
-		bufferBuilder.vertex(this.left, (this.top + 4), 0.0D).
-
-				color(0, 0, 0, 0).
-
-				next();
-		bufferBuilder.vertex(this.right, (this.top + 4), 0.0D).
+		bufferBuilder.begin(GL11.GL_QUADS, DefaultVertexFormat.POSITION_COLOR);
+		bufferBuilder.vertex(this.minX, (this.minY + 4), 0.0D).
 
 				color(0, 0, 0, 0).
 
-				next();
-		bufferBuilder.vertex(this.right, this.top, 0.0D).
-
-				color(0, 0, 0, 255).
-
-				next();
-		bufferBuilder.vertex(this.left, this.top, 0.0D).
-
-				color(0, 0, 0, 255).
-
-				next();
-		bufferBuilder.vertex(this.left, this.bottom, 0.0D).
-
-				color(0, 0, 0, 255).
-
-				next();
-		bufferBuilder.vertex(this.right, this.bottom, 0.0D).
-
-				color(0, 0, 0, 255).
-
-				next();
-		bufferBuilder.vertex(this.right, (this.bottom - 4), 0.0D).
+				nextVertex();
+		bufferBuilder.vertex(this.maxX, (this.minY + 4), 0.0D).
 
 				color(0, 0, 0, 0).
 
-				next();
-		bufferBuilder.vertex(this.left, (this.bottom - 4), 0.0D).
+				nextVertex();
+		bufferBuilder.vertex(this.maxX, this.minY, 0.0D).
+
+				color(0, 0, 0, 255).
+
+				nextVertex();
+		bufferBuilder.vertex(this.minX, this.minY, 0.0D).
+
+				color(0, 0, 0, 255).
+
+				nextVertex();
+		bufferBuilder.vertex(this.minX, this.maxY, 0.0D).
+
+				color(0, 0, 0, 255).
+
+				nextVertex();
+		bufferBuilder.vertex(this.maxX, this.maxY, 0.0D).
+
+				color(0, 0, 0, 255).
+
+				nextVertex();
+		bufferBuilder.vertex(this.maxX, (this.maxY - 4), 0.0D).
 
 				color(0, 0, 0, 0).
 
-				next();
-		tessellator.draw();
+				nextVertex();
+		bufferBuilder.vertex(this.minX, (this.maxY - 4), 0.0D).
+
+				color(0, 0, 0, 0).
+
+				nextVertex();
+		tessellator.end();
 
 		this.renderScrollBar(bufferBuilder, tessellator);
 
-		RenderSystem.disableBlend();
+		GlStateManager.enableTexture();
+		GlStateManager.shadeModel(GL11.GL_FLAT);
+		GlStateManager.enableAlphaTest();
+		GlStateManager.disableBlend();
 	}
 
-	public void renderScrollBar(BufferBuilder bufferBuilder, Tessellator tessellator) {
-		int scrollbarStartX = this.getScrollbarPositionX();
-		int scrollbarEndX = scrollbarStartX + 6;
-		int maxScroll = this.getMaxScroll();
-		if (maxScroll > 0) {
-			int p = (int) ((float) ((this.bottom - this.top) * (this.bottom - this.top)) / (float) this.getMaxPosition());
-			p = MathHelper.clamp(p, 32, this.bottom - this.top - 8);
-			int q = (int) this.getScrollAmount() * (this.bottom - this.top - p) / maxScroll + this.top;
-			if (q < this.top) {
-				q = this.top;
-			}
-
-			RenderSystem.setShader(GameRenderer::getPositionColorProgram);
-			bufferBuilder.begin(VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_COLOR);
-			bufferBuilder.vertex(scrollbarStartX, this.bottom, 0.0D).color(0, 0, 0, 255).next();
-			bufferBuilder.vertex(scrollbarEndX, this.bottom, 0.0D).color(0, 0, 0, 255).next();
-			bufferBuilder.vertex(scrollbarEndX, this.top, 0.0D).color(0, 0, 0, 255).next();
-			bufferBuilder.vertex(scrollbarStartX, this.top, 0.0D).color(0, 0, 0, 255).next();
-			bufferBuilder.vertex(scrollbarStartX, q + p, 0.0D).color(128, 128, 128, 255).next();
-			bufferBuilder.vertex(scrollbarEndX, q + p, 0.0D).color(128, 128, 128, 255).next();
-			bufferBuilder.vertex(scrollbarEndX, q, 0.0D).color(128, 128, 128, 255).next();
-			bufferBuilder.vertex(scrollbarStartX, q, 0.0D).color(128, 128, 128, 255).next();
-			bufferBuilder.vertex(scrollbarStartX, q + p - 1, 0.0D).color(192, 192, 192, 255).next();
-			bufferBuilder.vertex(scrollbarEndX - 1, q + p - 1, 0.0D).color(192, 192, 192, 255).next();
-			bufferBuilder.vertex(scrollbarEndX - 1, q, 0.0D).color(192, 192, 192, 255).next();
-			bufferBuilder.vertex(scrollbarStartX, q, 0.0D).color(192, 192, 192, 255).next();
-			tessellator.draw();
+	@Override
+	protected void renderEntry(int index, int x, int y, int height, int mouseX, int mouseY, float tickDelta) {
+		if (y >= this.minY && y + height <= this.maxY) {
+			super.renderEntry(index, x, y, height, mouseX, mouseY, tickDelta);
 		}
 	}
 
-	protected class DescriptionEntry extends ElementListWidget.Entry<DescriptionEntry> {
-		protected OrderedText text;
+	public void renderScrollBar(BufferBuilder bufferBuilder, Tessellator tessellator) {
+		int scrollbarStartX = this.getScrollbarPosition();
+		int scrollbarEndX = scrollbarStartX + 6;
+		int maxScroll = this.getMaxScroll();
+		if (maxScroll > 0) {
+			int p = (int) ((float) ((this.maxY - this.minY) * (this.maxY - this.minY)) / (float) this.getMaxScroll());
+			p = MathHelper.clamp(p, 32, this.maxY - this.minY - 8);
+			int q = (int) this.getScrollAmount() * (this.maxY - this.minY - p) / maxScroll + this.minY;
+			if (q < this.minY) {
+				q = this.minY;
+			}
+
+			bufferBuilder.begin(GL11.GL_QUADS, DefaultVertexFormat.POSITION_COLOR);
+			bufferBuilder.vertex(scrollbarStartX, this.maxY, 0.0D).color(0, 0, 0, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX, this.maxY, 0.0D).color(0, 0, 0, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX, this.minY, 0.0D).color(0, 0, 0, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarStartX, this.minY, 0.0D).color(0, 0, 0, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarStartX, q + p, 0.0D).color(128, 128, 128, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX, q + p, 0.0D).color(128, 128, 128, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX, q, 0.0D).color(128, 128, 128, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarStartX, q, 0.0D).color(128, 128, 128, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarStartX, q + p - 1, 0.0D).color(192, 192, 192, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX - 1, q + p - 1, 0.0D).color(192, 192, 192, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarEndX - 1, q, 0.0D).color(192, 192, 192, 255).nextVertex();
+			bufferBuilder.vertex(scrollbarStartX, q, 0.0D).color(192, 192, 192, 255).nextVertex();
+			tessellator.end();
+		}
+	}
+
+	@Override
+	public void confirmResult(boolean result, int id) {
+		if (result) {
+			List<DescriptionEntry> entries = this.children();
+
+			if (id >= 0 && id < entries.size()) {
+				DescriptionEntry entry = entries.get(id);
+
+				if (entry instanceof LinkEntry) {
+					String link = ((LinkEntry) entry).link;
+					Utils.getOS().openUri(link);
+				}
+			}
+		}
+
+		minecraft.openScreen(this.parent);
+	}
+
+	protected class DescriptionEntry extends EntryListWidget.Entry<DescriptionEntry> {
+		protected String text;
 		protected int indent;
 		public boolean updateTextEntry = false;
 
-		public DescriptionEntry(OrderedText text, int indent) {
+		public DescriptionEntry(String text, int indent) {
 			this.text = text;
 			this.indent = indent;
 		}
 
-		public DescriptionEntry(OrderedText text) {
+		public DescriptionEntry(String text) {
 			this(text, 0);
 		}
 
@@ -330,41 +344,30 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 		}
 
 		@Override
-		public void render(DrawContext DrawContext, int index, int y, int x, int itemWidth, int itemHeight, int mouseX, int mouseY, boolean isSelected, float delta) {
+		public void render(int width, int height, int mouseX, int mouseY, boolean hovered, float delta) {
 			if (updateTextEntry) {
-				UpdateAvailableBadge.renderBadge(DrawContext, x + indent, y);
-				x += 11;
+				UpdateAvailableBadge.renderBadge(getX() + indent, getY());
 			}
-			DrawContext.drawTextWithShadow(textRenderer, text, x + indent, y, 0xAAAAAA);
-		}
-
-		@Override
-		public List<? extends Element> children() {
-			return Collections.emptyList();
-		}
-
-		@Override
-		public List<? extends Selectable> selectableChildren() {
-			return Collections.emptyList();
+			textRenderer.drawWithShadow(text, getX() + indent, getY(), 0xAAAAAA);
 		}
 	}
 
 	protected class MojangCreditsEntry extends DescriptionEntry {
-		public MojangCreditsEntry(OrderedText text) {
+		public MojangCreditsEntry(String text) {
 			super(text);
 		}
 
 		@Override
 		public boolean mouseClicked(double mouseX, double mouseY, int button) {
-			if (isMouseOver(mouseX, mouseY)) {
-				client.setScreen(new MinecraftCredits());
+			if (isMouseInList(mouseX, mouseY)) {
+				minecraft.openScreen(new MinecraftCredits());
 			}
 			return super.mouseClicked(mouseX, mouseY, button);
 		}
 
-		class MinecraftCredits extends CreditsAndAttributionScreen {
+		class MinecraftCredits extends CreditsScreen {
 			public MinecraftCredits() {
-				super(parent);
+				super(false, () -> { });
 			}
 		}
 	}
@@ -372,24 +375,19 @@ public class DescriptionListWidget extends EntryListWidget<DescriptionListWidget
 	protected class LinkEntry extends DescriptionEntry {
 		private final String link;
 
-		public LinkEntry(OrderedText text, String link, int indent) {
+		public LinkEntry(String text, String link, int indent) {
 			super(text, indent);
 			this.link = link;
 		}
 
-		public LinkEntry(OrderedText text, String link) {
+		public LinkEntry(String text, String link) {
 			this(text, link, 0);
 		}
 
 		@Override
 		public boolean mouseClicked(double mouseX, double mouseY, int button) {
-			if (isMouseOver(mouseX, mouseY)) {
-				client.setScreen(new ConfirmLinkScreen((open) -> {
-					if (open) {
-						Util.getOperatingSystem().open(link);
-					}
-					client.setScreen(parent);
-				}, link, false));
+			if (isMouseInList(mouseX, mouseY)) {
+				minecraft.openScreen(new ConfirmChatLinkScreen(DescriptionListWidget.this, link, index, false));
 			}
 			return super.mouseClicked(mouseX, mouseY, button);
 		}
